# cartesi_vault_rust

./: Cargo.toml  README.md  index.css  index.html  tailwind.config.js
backend/: .env.example  Cargo.toml
backend/src/: main.rs
src/: landing.rs  lib.rs  main.rs  top_nav.rs
