workspace = { members = ["backend"] }
[package]
name = "cartesi-rust-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
web-sys = "0.3.69"
gloo = { version = "0.11.0", features = ["storage"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
alloy-chains = { version = "0.1.0", features = ["serde", "rlp", "arbitrary"] }
alloy-core = { version = "0.6.4", features = ["serde", "json-abi", "sol-types"] }
alloy-contract = { git = "https://github.com/alloy-rs/alloy" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy" }
